# -eliasRangel

./: README.md  nx.json  output.json  package.json  pnpm-lock.yaml  tsconfig.base.json
protobuffers/: Cargo.toml  README.md  build.rs  project.json
protobuffers/src/: lib.rs
protobuffers/src/shared/: file.proto  git.proto
tauri/: Cargo.toml  build.rs  project.json  tauri.conf.json
tauri-e2e/: jest.config.ts  project.json
tauri-e2e/src/tauri/: tauri.spec.ts
tauri/src/: error_utilities.rs  git_utilities.rs  lib.rs  main.rs
utilities/: .swcrc  eslint.config.js  jest.config.ts  package.json  pnpm-lock.yaml  project.json  rollup.config.js  tsconfig.json  tsconfig.lib.json
utilities/src/: index.ts
utilities/src/lib/: constants.ts  hooks.ts  types.ts
utilities/src/lib/context/: app-context-default-values.ts  app-context.ts
utilities/src/lib/data-structures/: index.ts
utilities/src/lib/data-structures/graphs/: node.ts
web/: eslint.config.js  tsconfig.json  vite.config.ts
web/src/: main.tsx
web/src/app/: app.tsx
