[package]
name = "dependency-viewer"
version = "0.1.0"
description = "A dependency viewer"
authors = ["you"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
build = true


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dependency_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]



[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13.3"


[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19.0"
thiserror = "2.0.3"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.0.0"
prost = "0.13.3"
prost-types = "0.13.3"
protobuffers = { version = "0.1.0", path = "../protobuffers" }


